<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clFavorite">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbFavorite"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/yellow_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ibReturnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow_icon"
            android:src="@drawable/ic_color_back"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:id="@+id/tvBreweryDetailFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:text="@string/suas_cervejarias_favoritas"
            android:textColor="@color/brewery_black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/ivBorderFavorite"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="55dp"
            android:src="@drawable/ic_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFavoriteBrewery"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbFavorite">

        <TextView
            android:id="@+id/tvBreweryFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/suas_cervejarias"
            android:textColor="@color/brewery_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNumberResultsFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/brewery_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBreweryFavorite"
            tools:text="11" />

        <TextView
            android:id="@+id/tvFilterEvaluated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/ordernar_por"
            android:textColor="@color/brewery_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNumberResultsFavorite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/nota"
            android:textColor="@color/brewery_black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvFilterEvaluated"
            app:layout_constraintStart_toEndOf="@+id/tvFilterEvaluated"
            app:layout_constraintTop_toTopOf="@+id/tvFilterEvaluated" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favorite_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFilterEvaluated"
            tools:listitem="@layout/search_recycler_view_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_layout_no_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBorderFavorite">

        <TextView
            android:id="@+id/tv_no_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/nenhuma_cervejaria_favorita"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="@string/mensagem_nao_possui_favoritos"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_no_favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>