...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_msg_tv"
        app:strokeColor="@color/black"
        app:strokeWidth="0.02dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_remove_btn"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/yellow_rating"
        android:fontFamily="@font/roboto_medium"
...
