...
            android:textColor="@color/yellow_rating"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_brewery_search_recycler_view_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto"
            android:maxLength="24"
            android:textColor="@color/brewery_black"
...
            app:layout_constraintBottom_toBottomOf="@+id/image_star_rate_search_recycler_view_item"
            app:layout_constraintStart_toEndOf="@+id/dot2_textview"
            app:layout_constraintTop_toTopOf="@+id/image_star_rate_search_recycler_view_item"
            tools:text="0,9Km" />

        <ImageView
            android:id="@+id/ivLikeBrewery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
