...
    android:id="@+id/clHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbHome"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/yellow_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
...
            android:fontFamily="@font/roboto"
            android:text="@string/cit_brewery"
            android:textColor="@color/brewery_black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/ivHeart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_heart" />

...
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBestBreweries">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSearchLocal"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/busque_por_local"
                android:textColor="@color/brewery_black"
                android:imeOptions="actionSearch"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/ivButtonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/yellow_icon"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@+id/tilSearchLocal"
...
            app:layout_constraintBottom_toBottomOf="@+id/filter_search_recycler_view_item"
            app:layout_constraintStart_toEndOf="@+id/filter_search_recycler_view_item"
            app:layout_constraintTop_toTopOf="@+id/filter_search_recycler_view_item" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/evaluated_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/background"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
            android:textColor="@color/brewery_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTopTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
...
