...
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/paddys_irish_pub1"
                tools:ignore="ContentDescription"
                />

            <TextView
                android:id="@+id/tvCardBreweryName"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:maxLength="20"
...
